--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,9 @@
   "http://*.google.com/",
    "https://*.google.com/"
  ],
+"background": {
+    "scripts": ["js/background.js"]
+},
 "browser_action": {
   "default_title": "",
   "default_icon": {
@@ -25,7 +28,7 @@
     {
       "matches": ["<all_urls>"],
       // "css": ["css/bootstrap.min.css","css/index.css"],
-      "js": ["js/jquery-3.2.1.min.js","js/main.js"]
+      "js": ["js/jquery-3.2.1.min.js","js/content_script.js"]
       // "run_at":"document_end"
     }
   ]
